--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
   <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body id="body">
+  <div id="div_tab">
+    <a id="a_tab_map" class="c_a">地図</a>
+    <a id="a_tab_gen" class="c_a">現在</a>  
+    <a id="a_tab_disp" class="c_a">表示</a>
+    <a id="a_tab_data" class="c_a">data</a>
+  </div>
   <div id="div_can" class="c_can">
     <canvas id="can_main"></canvas>
     <canvas id="can_error"></canvas>
@@ -15,8 +21,19 @@
   </div>
   <div id="div_kno">
     <a>機能:</a>
-    <a id="a_kno" class="c_a">地図</a>
-    <a id="a_kno_log" class="c_a">未録</a>
+    <select id="sel_kno">
+      <option value="dispAll">全表示</option>
+      <option value="dispSel">選択表示</option>
+      <option value="dispSumm">集計表示</option>
+      <option value="saveAll">全保存</option>
+      <option value="saveSel">選択保存</option>
+      <option value="addKan">管理追加</option>
+      <option value="addFile">保存追加</option>  
+      <option value="delSel">選択削除</option>
+    </select>
+    <select id="sel_kno_key"></select>
+    <input id="in_kno_file" type="file" style="display:none"></input>
+    <a id="a_kno_exe" class="c_a">実行</a>  
   </div>
   <div id="div_map">
     <a>地図:</a>
@@ -24,25 +41,12 @@
     <input id="in_map_file" type="file" style="display:none"></input>
     <input id="in_map_text" type="text"></input>
     <select id="sel_map_ex"></select>
-    <a id="a_map_pos" class="c_a">位Ｘ</a>
-    <a id="a_map_disp" class="c_a">表示</a>
   </div>
-  <div id="div_ope">
-    <a>操作:</a>
-    <select id="sel_ope">
-      <option value="dispAll">全表示</option>
-      <option value="dispSel">選択表示</option>
-      <option value="dispSumm">集計表示</option>
-      <option value="saveAll">全保存</option>
-      <option value="saveSel">選択保存</option>
-      <option value="addKan">管理データ追加</option>
-      <option value="addFile">保存データ追加</option>  
-      <option value="delSel">選択削除</option>
-    </select>
-    <a id="a_ope_key">選択:</a>
-    <select id="sel_ope_key"></select>
-    <input id="in_save_file" type="file" style="display:none"></input>
-    <a id="a_ope_exe" class="c_a">実行</a>
+  <div id="div_set">
+    <a>設定:</a>
+    <a id="a_set_gen" class="c_a">現在地未設定</a>
+    <a id="a_set_log" class="c_a">記録停止</a>
+    <a id="a_set_pos" class="c_a">位置計測</a>
   </div>
   <div id="div_act1">
     <a>キー:</a>
@@ -110,7 +114,9 @@
       <tbody id="tbo_summ"></tbody>
     </table>
   </div>
-  <pre id="pre_info"></pre>
+  <div id="div_info">
+    <pre id="pre_info"></pre>
+  </div>
   <script type="text/javascript" src="main.js"></script>
 </body>
 </html>
