--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@
 </head>
 <body id="body">
   <div id="div_tab">
-    <input id="in_tab_map" type="button" class="c_tab" value="地図">
-    <input id="in_tab_gen" type="button" class="c_tab" value="現在">
-    <input id="in_tab_disp" type="button" class="c_tab" value="表示">
-    <input id="in_tab_data" type="button" class="c_tab" value="data">
-  </div>
-  <div id="div_can" class="c_can">
-    <canvas id="can_main"></canvas>
-    <canvas id="can_error"></canvas>
-    <canvas id="can_flag"></canvas> 
-    <canvas id="can_log"></canvas>     
-  </div>
-  <div id="div_kno">
-    <a>機能</a>
-    <select id="sel_kno">
+    <select id="sel_a">
+      <option value="aMap">地図選択</option>
+      <option value="aGen">現在地設定</option>
+      <option value="aDisp">地図表示</option>
+      <option value="aFlag">Flag設定</option>
+      <option value="aPos">位置計測</option>
+      <option value="aStart">記録開始</option>
+      <option value="aStop">記録停止</option>
+      <option value="aData">Data処理</option>
+    </select>
+    <input id="in_map_file" type="file" style="display:none">
+    <input id="in_map_text" type="text">
+    <select id="sel_map_ex"></select>
+    <select id="sel_data">
       <option value="dispAll">全表示</option>
       <option value="dispSel">選択表示</option>
       <option value="dispSumm">集計表示</option>
@@ -31,32 +31,25 @@
       <option value="addFile">保存追加</option>  
       <option value="delSel">選択削除</option>
     </select>
-    <select id="sel_kno_key"></select>
-    <input id="in_kno_file" type="file" style="display:none">
-    <input id="in_kno_exe" type="button" class="c_btn" value="実行">
+    <select id="sel_c"></select>
+    <input id="in_data_file" type="file" style="display:none">
+    <input id="in_data_exe" type="button" class="c_btn" value="実行">
+    <div id="div_recY">🔴</div>
+    <div id="div_recN">🔵</div>
   </div>
-  <div id="div_map">
-    <a>地図</a>
-    <input id="in_map_sel" type="button" class="c_btn" value="選択">
-    <input id="in_map_file" type="file" style="display:none">
-    <input id="in_map_text" type="text">
-    <select id="sel_map_ex"></select>
-  </div>
-  <div id="div_set">
-    <a>設定</a>
-    <input id="in_set_gen" type="button" class="c_btn" value="現在地未設定">
-    <input id="in_set_log" type="button" class="c_btn" value="記録停止">
-    <input id="in_set_pos" type="button" class="c_btn" value="位置計測">
+  <div id="div_can" class="c_can">
+    <canvas id="can_main"></canvas>
+    <canvas id="can_error"></canvas>
+    <canvas id="can_flag"></canvas> 
+    <canvas id="can_log"></canvas>     
   </div>
   <div id="div_act1">
-    <a>キー</a>
     <input id="in_act_key" type="text">
     <input id="in_act_ins" type="button" class="c_btn" value="＋">
     <input id="in_act_upd" type="button" class="c_btn" value="Ｃ">
     <input id="in_act_del" type="button" class="c_btn" value="Ｄ">
   </div>
   <div id="div_act2">
-    <a>内容</a>
     <input id="in_act_val" type="text">
   </div>
   <div id="div_all">
@@ -113,6 +106,12 @@
       </thead>
       <tbody id="tbo_summ"></tbody>
     </table>
+  </div>
+  <div id="div_ctrl">
+    <input id="in_ctrl_text" type="text"><br>
+    <input id="in_ctrl_ins" type="button" class="c_btn" value="追加">
+    <input id="in_ctrl_upd" type="button" class="c_btn" value="修正">
+    <input id="in_ctrl_del" type="button" class="c_btn" value="削除">
   </div>
   <div id="div_info">
     <pre id="pre_info"></pre>
