--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     <select id="sel_c"></select>
     <input id="in_data_file" type="file" style="display:none">
     <input id="in_data_exe" type="button" class="c_btn" value="実行">
-    <div id="div_recY">🔴</div>
-    <div id="div_recN">🔵</div>
+    <input id="in_data_n" type="button" class="c_switch" value="🔵">
+    <input id="in_data_y" type="button" class="c_switch" value="🔴">
   </div>
   <div id="div_can" class="c_can">
     <canvas id="can_main"></canvas>
