--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
     <select id="sel_c"></select>
     <input id="in_data_file" type="file" style="display:none">
     <input id="in_data_exe" type="button" class="c_btn" value="実行">
+    <input id="in_data_flag" type="button" class="c_btn" value="flag">
+    <input id="in_data_log" type="button" class="c_btn" value="log">
     <input id="in_data_n" type="button" class="c_switch" value="🔵">
     <input id="in_data_y" type="button" class="c_switch" value="🔴">
   </div>
