--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
   <div id="div_tab">
     <select id="sel_a">
       <option value="aMap">地図選択</option>
-      <option value="aGen">現在地設定</option>
+      <option value="aGen">現在設定</option>
       <option value="aDisp">地図表示</option>
       <option value="aFlag">Flag設定</option>
       <option value="aPos">位置計測</option>
       <option value="aStart">記録開始</option>
       <option value="aStop">記録停止</option>
-      <option value="aData">Data処理</option>
+      <option value="aData">データ</option>
     </select>
     <input id="in_map_file" type="file" style="display:none">
     <input id="in_map_text" type="text">
