--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <option value="aMap">地図選択</option>
       <option value="aGen">現在設定</option>
       <option value="aDisp">地図表示</option>
+      <option value="aRoute">経路表示</option>
       <option value="aFlag">Flag設定</option>
       <option value="aPos">位置計測</option>
       <option value="aStart">記録開始</option>
