--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
     <select id="sel_a">
       <option value="aMap">地図選択</option>
       <option value="aGen">現在設定</option>
-      <option value="aDisp">地図表示</option>
-      <option value="aRoute">経路表示</option>
+      <option value="aDispN">表示</option>
+      <option value="aDispL">表示線</option>
+      <option value="aDispT">表示時間</option>
+      <option value="aDispB">表示線時</option>
       <option value="aFlag">Flag設定</option>
       <option value="aPos">位置計測</option>
       <option value="aStart">記録開始</option>
@@ -27,6 +29,7 @@
       <option value="dispSel">選択表示</option>
       <option value="dispSumm">集計表示</option>
       <option value="saveAll">全保存</option>
+      <option value="saveCfh">cfh保存</option>
       <option value="saveSel">選択保存</option>
       <option value="addKan">管理追加</option>
       <option value="addFile">保存追加</option>  
